# Playlift

./: .gitignore  .pre-commit-config.yaml  README.md  analyze_output.py  cleanup.py  exceptions.py  main.py  pyproject.toml  requirements.txt  singleton.py  sync_exported_playlists.py
.github/: copilot-instructions.md
.github/agents/: speckit.taskstoissues.agent.md  type-hints.agent.md
.github/instructions/: clean-code.instructions.md  code-review.instructions.md  python.instructions.md  testing.instructions.md
.github/skills/mypy-check/: SKILL.md
.github/skills/pr-diff/: SKILL.md
.github/skills/pr-diff/scripts/: pr-diff.ps1  pr-diff.sh
.github/skills/refactor/: SKILL.md
.github/workflows/: bump-version.yml  lint.yml  tests.yml  type-check.yml
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
api/: deezer.py  spotify.py  spotify_utils.py
config/: __init__.py  config_template.ini
matchers/: __init__.py  spotify_matcher.py
playlists/: __init__.py  compare.py  deezer_playlist.py  local_library.py  local_playlist.py  path_mapper.py  spotify_playlist.py
providers/: __init__.py  local_playlist.py  playlist.py
specs/001-isrc-track-matching/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-isrc-track-matching/checklists/: api.md  audio-formats.md  code-quality.md  requirements.md  tests.md
specs/002-fix-isrc-mp4-bugs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-isrc-mp4-bugs/checklists/: requirements.md
specs/003-batch-isrc-prefetch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-batch-isrc-prefetch/checklists/: requirements.md
specs/004-remove-spotifyapi-di/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-remove-spotifyapi-di/checklists/: requirements.md
specs/005-decouple-playlist-synctarget/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-decouple-playlist-synctarget/checklists/: requirements.md
specs/006-fix-matcher-layer-violation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-fix-matcher-layer-violation/checklists/: requirements.md
specs/006-fix-matcher-layer-violation/contracts/: embeddable-track.md  matcher-service-name.md  service-track.md
specs/007-deezer-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-deezer-integration/checklists/: requirements.md
specs/007-deezer-integration/contracts/: cli.md
src/: cleanup.py  main.py  singleton.py  sync_exported_playlists.py
src/api/: deezer.py  spotify.py  spotify_utils.py
src/config/: __init__.py  config.ini  config_template.ini
src/matchers/: __init__.py  deezer_matcher.py  spotify_matcher.py
src/playlists/: __init__.py  compare.py  deezer_compare.py  deezer_playlist.py  local_library.py  local_playlist.py
src/tracks/: __init__.py  deezer_track.py  spotify_track.py
tests/: test_spotify_playlist.py
tests/api/: test_deezer.py
tests/integration/: conftest.py  test_deezer_integration.py  test_spotify_integration.py
tests/matchers/: matcher_mock.py  test_deezer_matcher.py  test_spotify_matcher.py
tests/playlists/: playlist_mock.py  spotify_playlist_spy.py  test_compare.py  test_deezer_compare.py  test_deezer_duplicates.py  test_deezer_playlist.py  test_deezer_playlist_integration.py  test_path_mapper.py  test_spotify_playlist.py
tests/tracks/: test_deezer_track.py  test_local_track.py  test_spotify_track.py  track_mock.py
tracks/: __init__.py  deezer_track.py  local_track.py  mutagen_track.py  spotify_track.py  track.py
