[project]
name = "playlist-sync"
version = "0.1.0"
description = "Sync local playlists to Spotify"
readme = "README.md"
requires-python = ">=3.11"
authors = [ { name = "Your Name", email = "you@example.com" } ]
license = "MIT"

dependencies = [
    "music-tag==0.4.3",
    "spotipy==2.23.0",
    "jsonpickle==3.0.3",
    "click==8.1.7",
    "tqdm==4.66.2",
    "tabulate==0.9.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "types-tabulate>=0.10.0.20260308",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Explicitly include only the top-level packages that are meant to be distributed
include = ["api*", "config*", "tracks*", "matchers*", "playlists*"]

[tool.uv]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that require a live Spotify API connection (deselect with '-m not integration')",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

