[project]
name = "playlist-sync"
version = "0.1.0"
description = "Sync local playlists to Spotify"
readme = "README.md"
requires-python = ">=3.11"
authors = [ { name = "Your Name", email = "you@example.com" } ]
license = "MIT"

dependencies = [
    "music-tag==0.4.3",
    "spotipy==2.23.0",
    "jsonpickle==3.0.3",
    "click==8.1.7",
    "tqdm==4.66.2",
    "tabulate==0.9.0",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "types-tabulate>=0.10.0.20260308",
    "types-tqdm>=4.67.3.20260402",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Explicitly include only the top-level packages that are meant to be distributed
include = ["api*", "config*", "tracks*", "matchers*", "playlists*"]

[tool.uv]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade (modernize syntax)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific (mutable defaults, unused noqa, etc.)
    "PT",   # flake8-pytest-style
    "TCH",  # flake8-type-checking
]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that require a live Spotify API connection (deselect with '-m not integration')",
]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"
commit_message = "chore: bump version {current_version} → {new_version} [skip ci]"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["spotipy", "spotipy.*", "music_tag"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["api.spotify", "tracks.local_track"]
disallow_any_unimported = false
